<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/fon_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">


            <dmitriy.deomin.aimpradioplalist.custom.Btn
                android:id="@+id/button_edit_fon_color"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="Edit_color_fon"
                android:text="@string/cvet_fon" />

            <dmitriy.deomin.aimpradioplalist.custom.Btn
                android:id="@+id/button_edit_color_posty"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="Edit_color_fon"
                android:text="@string/cvet_stanciy" />

            <dmitriy.deomin.aimpradioplalist.custom.Btn
                android:id="@+id/button_edit_color_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="Edit_color_fon"
                android:text="@string/cvet_textta" />

            <dmitriy.deomin.aimpradioplalist.custom.Btn
                android:id="@+id/button_edit_color_selekt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="Edit_color_selekt"
                android:text="@string/color_selekt" />

            <dmitriy.deomin.aimpradioplalist.custom.Btn
                android:id="@+id/button_edit_color_textcontext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:onClick="Edit_color_fon"
                android:text="@string/cvet_texta_contexta" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <dmitriy.deomin.aimpradioplalist.custom.Btn
                    android:id="@+id/button_save_them_list"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/ic_menu_save" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <dmitriy.deomin.aimpradioplalist.custom.Btn
                    android:id="@+id/open_list_them"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/ic_menu_agenda" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_list_them"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_them"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:visibility="visible">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

    <dmitriy.deomin.aimpradioplalist.custom.Btn
        android:id="@+id/button_close_setting_color"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:background="@null"
        android:text="Ok" />

</LinearLayout>