<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fon_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dmitriy.deomin.aimpradioplalist.Main"
    android:orientation="vertical"
    android:background="@null">


    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:background="@null" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal">

        <dmitriy.deomin.aimpradioplalist.custom.Btn
            android:id="@+id/vse_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/vseRadio"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_vse_radio"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <dmitriy.deomin.aimpradioplalist.custom.Btn
            android:id="@+id/popularnoe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/popularnoe" />

        <dmitriy.deomin.aimpradioplalist.custom.Btn
            android:id="@+id/moy_plalist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/myPlalist"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_moy_plalist"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <dmitriy.deomin.aimpradioplalist.custom.Btn
            android:id="@+id/online_plalist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/Online_plalist_vkladka"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_online_plalist"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="visible" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null">

    </androidx.viewpager.widget.ViewPager>

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        ads:adSize="SMART_BANNER"-->
<!--        ads:adUnitId="@string/banner_ad_unit_id"-->
<!--        android:background="@null"/>-->
</LinearLayout>
